--- a/adminlte.info.yml
+++ b/adminlte.info.yml
@@ -8,7 +8,10 @@ core: 8.x
 libraries:
   - adminlte/base
 regions:
+  brand: Site Branding
+  header: Header
+  top: Top
   content: Content
+  bottom: Bottom
   sidebar: Sidebar
   footer: Footer
-  breadcrumb: Breadcrumb
