renamed to yorkshire and updated to latest version

--- a/yorkshire.info.yml
+++ b/yorkshire.info.yml
@@ -1,4 +1,4 @@
-name: AdminLTE
+name: Yorkshire
 description: 'Drupal 8 admin theme based on AdminLTE by Almaseed Studio'
 base theme: classy
 package: Custom
@@ -6,7 +6,7 @@ type: theme
 version: 1.0.0
 core: 8.x
 libraries:
-  - adminlte/base
+  - yorkshire/base
 regions:
   brand: Site Branding
   header: Header
